--- a/Ecommerce/src/components/header/header.css
+++ b/Ecommerce/src/components/header/header.css
@@ -1,6 +1,6 @@
 .header{
-    height: 40px;
+    height: 30px;
     width:100%;
-    background-color: rgb(137, 137, 216);
+    background-color: rgba(240, 197, 6, 0.877);
 
 }
